--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     max-width: 900px;
     margin: auto;
   }
-
   .section {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 40px;
   }
-
   .column {
     flex: 1;
     background-color: #fff3e0;
@@ -27,43 +25,45 @@
     border-radius: 12px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   }
-
-  input[type="text"] {
+  input[type="text"],
+  input[type="file"],
+  select,
+  textarea {
     width: 100%;
+    box-sizing: border-box;
     padding: 10px;
     margin-top: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 6px;
   }
-
   button {
-  height: 42px; 
-  padding: 0 20px; 
-  background-color: #a1887f;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 16px;
-  white-space: nowrap;
-}
-
+    height: 42px;
+    padding: 0 20px;
+    background-color: #a1887f;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+    white-space: nowrap;
+  }
+  button.full-width {
+    width: 100%;
+  }
   #confessionExpiry {
-  height: 42px;
-  padding: 0 10px;
-  border-radius: 6px;
-  border: none;
-  background-color: #a1887f;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-
+    height: 42px;
+    padding: 0 10px;
+    border-radius: 6px;
+    border: none;
+    background-color: #a1887f;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+  }
   #customFile {
     margin-top: 10px;
   }
-
   .entry {
     margin-top: 15px;
     padding: 10px;
@@ -72,7 +72,6 @@
     box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     position: relative;
   }
-
   .reactions {
     display: flex;
     gap: 8px;
@@ -81,41 +80,34 @@
     pointer-events: none;
     transition: opacity 0.3s ease;
   }
-
   .entry:hover .reactions {
     opacity: 1;
     pointer-events: auto;
   }
-
   .reactions span {
     font-size: 20px;
     cursor: pointer;
     opacity: 1;
     transition: transform 0.2s ease, opacity 0.3s ease;
   }
-
   .reactions span:hover {
     transform: scale(1.2);
   }
-
   .reactions[data-selected] span:not([data-active]) {
     opacity: 0;
     pointer-events: none;
   }
-
   .reactions[data-selected]:hover span {
     opacity: 1;
     pointer-events: auto;
   }
-
   .entry:hover .reaction-circle {
     opacity: 0;
   }
-
   .reaction-circle {
     position: absolute;
     bottom: -10px;
-    left: 10px; 
+    left: 10px;
     background: #ffeaa7;
     border-radius: 50%;
     padding: 6px;
@@ -125,13 +117,11 @@
     transition: opacity 0.3s ease;
     z-index: 10;
   }
-
   .top-reacted,
   .minigames,
   .meme-generator {
     margin-bottom: 40px;
   }
-
   .top-reacted ol {
     display: flex;
     gap: 20px;
@@ -139,7 +129,6 @@
     padding: 0;
     list-style: none;
   }
-
   .top-reacted li {
     flex: 1;
     background: #fff3e0;
@@ -149,11 +138,9 @@
     position: relative;
     transition: all 0.3s ease;
   }
-
   .top-reacted li:hover .reaction-counts {
     display: block;
   }
-
   .reaction-counts {
     display: none;
     position: absolute;
@@ -164,133 +151,118 @@
     padding: 5px 10px;
     border-radius: 8px;
   }
-
   .emoji-burst {
     position: absolute;
     font-size: 24px;
     animation: floatUp 1s ease-out forwards;
     pointer-events: none;
   }
-
   @keyframes floatUp {
-    0% {
-      opacity: 1;
-      transform: translateY(0) scale(1);
+    0% { opacity: 1; transform: translateY(0) scale(1); }
+    50% { transform: translateY(-40px) scale(1.4); }
+    100% { opacity: 0; transform: translateY(-80px) scale(0.8); }
+  }
+  .scrollable-box {
+    max-height: 300px;
+    overflow-y: auto;
+    padding-right: 10px;
+  }
+  .scrollable-box::-webkit-scrollbar {
+    width: 6px;
+  }
+  .scrollable-box::-webkit-scrollbar-thumb {
+    background-color: #a1887f;
+    border-radius: 4px;
+  }
+  .gallery-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    min-height: 120px;
+  }
+  .gallery-grid img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+  .gallery-grid img:hover {
+    transform: scale(1.05);
+  }
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    overflow: auto;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .modal[style*="display: flex"] {
+    opacity: 1;
+  }
+  .modal-content {
+    position: relative;
+    background: #fff8f0;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    max-width: 90%;
+    max-height: 90%;
+  }
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .close-button,
+  .use-image-button {
+    background-color: #a1887f;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 12px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  #collectionModalHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .modal-content img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 95vh;
+    display: block;
+    margin: 0 auto;
+    border-radius: 12px;
+  }
+  @media (max-width: 600px) {
+    .section {
+      flex-direction: column;
     }
-    50% {
-      transform: translateY(-40px) scale(1.4);
-    }
-    100% {
-      opacity: 0;
-      transform: translateY(-80px) scale(0.8);
+    input[type="text"],
+    input[type="file"],
+    select,
+    textarea,
+    button {
+      font-size: 14px;
     }
   }
-
-.scrollable-box {
-  max-height: 300px;
-  overflow-y: auto;
-  padding-right: 10px;
-}
-
-.scrollable-box::-webkit-scrollbar {
-  width: 6px;
-}
-
-.scrollable-box::-webkit-scrollbar-thumb {
-  background-color: #a1887f;
-  border-radius: 4px;
-}
-
-    .gallery-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  min-height: 120px; 
-}
-
-.gallery-grid img {
-  width: 120px;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
-
-.gallery-grid img:hover {
-  transform: scale(1.05);
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2); 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
-  overflow: auto;
-}
-
-.modal-content {
-  position: relative;
-  background: #fff8f0;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  max-width: 90%;
-  max-height: 90%;
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.close-button,
-.use-image-button {
-  background-color: #a1887f;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  padding: 8px 12px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-    #collectionModalHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-    .modal-content img {
-  width: auto;
-  max-width: 100%;
-  height: auto;
-  max-height: 95vh;
-  display: block;
-  margin: 0 auto;
-  border-radius: 12px;
-}
-
-.modal {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.modal[style*="display: flex"] {
-  opacity: 1;
-}
-
-</style>
-
+  </style>
+	
 </head>
 <body>
 
@@ -361,7 +333,7 @@
     <h3>Meme Generator</h3>
     <input type="text" id="topText" placeholder="Top text" style="margin-bottom:10px; width:100%;"/>
     <input type="text" id="bottomText" placeholder="Bottom text" style="margin-bottom:10px; width:100%;"/>
-    <button onclick="generateMeme()" style="width:100%; margin-bottom:10px;">Generate Meme</button>
+    <button onclick="generateMeme()" class="full-width" style="margin-bottom:10px;">Generate Meme</button>
     <button onclick="generateRandomMeme()" style="width:100%;">🎲 Random Meme</button>
     <button onclick="downloadMeme()" style="width:100%; margin-top:10px;">⬇️ Download Meme</button>
 
@@ -936,7 +908,6 @@ function generateRandomMeme() {
   "🫘💨 Espresso isn’t a type of bean — it’s a brewing method. Any bean can be espresso if brewed with pressure.",
   "🐐💃 Legend says goats discovered coffee — a herder saw them dancing after eating coffee cherries. The original caffeine party.",
   "🎼☕ Beethoven was a coffee snob — he counted exactly 60 beans per cup before brewing. Precision brewing, classical edition.",
-  "👀📹 The first webcam was invented to monitor a coffee pot at Cambridge University. Because hallway disappointment is real.",
   "🍷🕊️ Coffee was once called the 'wine of Islam' — praised for its energizing effects and used in spiritual rituals before going global.",
   "wAlA pArin aKonG tUlOg hiHihiE💕✨",
 ];
