--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
     width: 100%;
   }
   #confessionExpiry {
-    height: 42px;
-    padding: 0 10px;
-    border-radius: 6px;
-    border: none;
-    background-color: #a1887f;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-  }
+  height: 42px;
+  line-height: 42px;   
+  padding: 0 10px;
+  border-radius: 6px;
+  border: none;
+  background-color: #a1887f;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  flex: 1;             
+}
+
   #customFile {
     margin-top: 10px;
   }
@@ -280,7 +283,7 @@
     <div class="column">
       <h3>Hidden Feelings 💕</h3>
       <input type="text" id="crushInput" placeholder="Got a secret crush?" />
-      <div style="display: flex; gap: 10px; margin-top: 10px;">
+      <div style="display: flex; gap: 10px; margin-top: 10px; align-items: center;">
   <select id="confessionExpiry" style="flex: 1;">
     <option value="">⏳ Select expiry time</option>
     <option value="0.5">30 seconds</option>
