--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   padding: 0 10px;
   border-radius: 6px;
   border: none;
+  margin-top: 0;
   background-color: #a1887f;
   color: white;
   font-size: 16px;
