--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <h3>Hidden Feelings 💕</h3>
       <input type="text" id="crushInput" placeholder="Got a secret crush?" />
       <div style="display: flex; gap: 10px; margin-top: 10px; align-items: center;">
-  <select id="confessionExpiry" style="flex: 1;">
+    <select id="confessionExpiry">
     <option value="">⏳ Select expiry time</option>
     <option value="0.5">30 seconds</option>
     <option value="5">5 minutes</option>
